--- a/Pratica_02/style.css
+++ b/Pratica_02/style.css
@@ -23,18 +23,20 @@ header{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 40px;
-    gap: 40px;
+    padding: 20px;
+    gap: 10px;
     background-color: #124a70;
     color: #fff;
+    height: 100vh;
 }
 
 .box-item{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    justify-content: flex-start;
     width: 100%;
-    gap: 15px;
+    padding: 20px;
 }
 
 .box-item h2{
